turtleart.lessons.turtleart.Main.Square.scala.error
Source:8: error: type mismatch;
 found   : Unit
 required: Null
		return;
                ^