turtleart.lessons.turtleart.Main.Square.scala.code
override def run() {
	def cote(i : Int) : Null = {
		for (k <- 1 to i) {
			avance(200);
			droite(90);
		}
		return;
	}
	cote(4);
}
